--- a/vs2013/evolution_sound.vcxproj
+++ b/vs2013/evolution_sound.vcxproj
@@ -33,10 +33,10 @@
     <ClCompile Include="..\src\evolution_wav_loader.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\core\vs2013\evolution_core.vcxproj">
+    <ProjectReference Include="..\..\evolution-core\vs2013\evolution_core.vcxproj">
       <Project>{9e6fb115-8d55-4a88-8a54-63d40aac73f1}</Project>
     </ProjectReference>
-    <ProjectReference Include="..\..\utility\vs2013\evolution_utility.vcxproj">
+    <ProjectReference Include="..\..\evolution-utility\vs2013\evolution_utility.vcxproj">
       <Project>{d8293f0e-1868-4cf6-b099-6eff4dbc2ef9}</Project>
     </ProjectReference>
   </ItemGroup>
