--- a/vs2013/evolution_sound.vcxproj.filters
+++ b/vs2013/evolution_sound.vcxproj.filters
@@ -47,5 +47,8 @@
     <ClCompile Include="..\src\evolution_sound3d.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
+    <ClCompile Include="..\src\evolution_writesound.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
